static/css/styles.css
:root {
    --bg: #444654;
    --bg-user: #343541;
    --bg-input: #353740;
    --bg-input-text: #40414f;
    --bg-side: #202123;
    --bg-side-new-chat-hover: #2b2c2f;
    --bg-side-hover: #2a2b32;
    --bg-side-selected: #353541;
    --bg-code-block-header: #343541;
    --bg-mode: #202123;
    --bg-mode-selected: #40414f;
    --bg-mode-selected-gray: #303139;
    --color-fg: #fff;
    --color-input: #fff;
    --color-input-placeholder: #6b6c7b;
    --color-assistant: #fff;
    --color-user: #fff;
    --color-code: #ccc;
    --color-disclaimer: #d9d9e3;
    --color-empty-chat: #565869;
    --color-mode: #8e8ea0;
    --color-mode-selected: #ececf1;
    --color-mode-selected-gray: #858689;
    --color-side-headers: #8e8ea0;
}

body, html {
    margin: 0;
    padding: 0;
    width: 100vw;
    height: 100vh;
}

main {
    display: grid;
    grid-template-rows: 1fr auto;
    grid-template-columns: 260px auto;
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    width: 100vw;
    height: 100vh;
    font-family: 'Open Sans', sans-serif;
    background: var(--bg-side);
}

.sidebar {
    grid-row: span 2;
    background: var(--bg-side);
    display: grid;
    grid-template-rows: auto 1fr;
    height: 100vh;
    box-sizing: border-box;
    padding: 0.5rem;
}

.sidebar .new-chat {
    display: block;
    box-sizing: border-box;
    padding: 0.75rem 1rem;
    margin-bottom: .25rem;
    border: 1px solid rgba(255, 255, 255, 0.2);
    color: var(--color-fg);
    border-radius: 0.375rem;
    font-size: 0.875rem;
    line-height: 1.25rem;
    cursor: pointer;
    transition: background-color 0.3s;
}

.sidebar .new-chat label {
    cursor: pointer;
}

.sidebar .new-chat:hover {
    background: var(--bg-side-new-chat-hover);
}

.sidebar #chat-list {
    overflow-y: auto;
    overflow-x: hidden;
}

.sidebar .section-header {
    padding: 0.5rem 0.75rem;
    height: 2.25rem;
    position: sticky;
    color: var(--color-side-headers);
    font-size: .75rem;
    line-height: 1rem;
}

.sidebar .chat {
    color: var(--color-fg);
    overflow: hidden;
    font-size: 0.875rem;
    line-height: 1.25rem;
    padding: 0.75rem;
    border-radius: 0.375rem;
    cursor: pointer;
}

.sidebar .chat:hover {
    background: var(--bg-side-hover);
}

.sidebar .chat.selected {
    background: var(--bg-side-selected);
}

.sidebar .chat label {
    text-overflow: ellipsis;
}

.conversation {
    background: var(--bg);
    overflow-y: auto;
}

.conversation .message {
    padding: 24px 16px 12px 16px;
    font-size: 16px;
    line-height: 28px;
}

.conversation .message.assistant {
    color: var(--color-assistant);
}

.conversation .message.user {
    background: var(--bg-user);
    color: var(--color-user);
}

.conversation .message > * {
    max-width: 48rem;
    display: block;
    margin: 0 auto 12px auto;
}

.conversation .message code {
    display: block;
    overflow-x: auto;
    background: #000;
    color: #eaeaea;
    padding: .5em 1em;
    border-radius: 8px;
}
.conversation .message code {
    font-size: 12px;
    color: var(--color-code);
}

.conversation .mode-selector {
    display: none;
    max-width: 48rem;
    margin: 0 auto 12px auto;
    width: 100%;
    height: 100%;
    justify-content: center;
    align-items: center;
    font-size: 30px;
    overflow: hidden;
}

.conversation #conversation-content:empty + .mode-selector {
    display: block;
}

.conversation .mode-selector .modes {
    margin-top: 1.5rem;
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(12rem, 1fr));
    gap: 0.5rem;
    max-width: 48rem;
}

.conversation .mode-selector .mode span {
    display: block;
    box-sizing: border-box;
    padding: 0.625rem 0.625rem;
    background: var(--bg-mode);
    color: var(--color-mode);
    border-radius: 12px;
    border: 0.25rem solid var(--bg-mode);
    font-size: 14px;
    cursor: pointer;
    transition: background-color 0.3s, color 0.3s;
    text-align: center;
}

.conversation .mode-selector .mode input[type="radio"] {
    display: none;
}

.conversation .mode-selector .mode input[type="radio"]:checked + span {
    background: var(--bg-mode-selected);
    color: var(--color-mode-selected);
}

.conversation .mode-selector:has(input[type="radio"]:hover) .mode input[type="radio"]:checked:not(:hover) + span {
    background: var(--bg-mode-selected-gray);
    color: var(--color-mode-selected-gray);
}

.conversation .mode-selector .mode input[type="radio"]:hover + span {
    color: var(--color-mode-selected);
}

.conversation #conversation-content.loading:after {
    content: 'loading...';
    display: block;
    color: var(--color-fg);
    font-size: 12px;
    text-align: center;
    padding: 10px;
}

.input {
    background: var(--bg-input);
    padding-top: 30px;
}

.input .inner-input {
    position: relative;
    max-width: 48rem;
    margin: 0 auto;
    display: block;
    box-shadow: var(--tw-ring-offset-shadow,0 0 transparent);
    border-radius: 12px;
    overflow: hidden;
}

.input #prompt-input {
    overflow-y: auto;  /* Hide vertical scrollbar */
    resize: none;        /* Disable textarea resizing */
    width: 100%;         /* Set width to 100% */
    height: 59px;
    box-sizing: border-box; /* Ensure padding doesn't affect width */
    max-height: 20vh;
    padding: 20px 50px 20px 16px;
    background: var(--bg-input-text);
    color: var(--color-input);
    outline: none;
    border: none;
    font-size: 16px;
}

.input #send-button {
    display: flex;
    justify-content: center;
    align-items: center;
    position: absolute;
    right: 12px;
    bottom: 12px;
    pointer-events: none;
    cursor: default;
    border-radius: 4px;
    padding: 2px;
    width: 32px;
    height: 32px;
    background: #ab68ff00;
    transition: background-color 0.15s, color 0.15s;
}

.input #prompt-input:not(:placeholder-shown) ~ #send-button {
    pointer-events: all;
    cursor: pointer;
    background: #ab68ff;
}

.input #send-button svg {
    width: 1rem;
    height: 1rem;
}

.input #send-button svg * {
    fill: var(--color-input-placeholder);
}

.input #prompt-input:not(:placeholder-shown) ~ #send-button  svg * {
    fill: var(--color-input);
}

.input .disclaimer {
    font-size: .75rem;
    line-height: 1rem;
    color: var(--color-disclaimer) !important;
    text-align: center;
    display: block;
    padding: .75rem 0 1.5rem 0;
}

.input .disclaimer a {
    color: var(--color-disclaimer) !important;
}

.sidebar-toggle {
    display: none; /* Initially hide the button */
    position: fixed;
    top: 10px;
    left: 10px;
    z-index: 200;
    cursor: pointer;
}


/* Media query for screens smaller than 800px */
@media (max-width: 1000px) {
    main {
        grid-template-rows: 1fr auto;
        grid-template-columns: 1fr;
        padding-top: 50px;
    }

    .sidebar {
        display: none;
        width: 100vw;
        height: 100vh;
        position: fixed;
        z-index: 100;
    }

    .sidebar.shown {
        display: block;
    }

    .sidebar-toggle {
        display: block; /* Show the toggle button */
    }
}

